--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -1,8 +1,9 @@
 <html>  
 <head>  
-    <title>upload</title>  
+    <title>Openslide Image Annotation</title>  
 </head>  
-<body>  
+<body>
+    <h1>Upload your file</h1>
     <form action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" />  
         <input type = "submit" value="Upload">  
