--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -6,7 +6,7 @@
     <h1>Upload your file</h1>
     <form action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" />  
-        <input type = "submit" value="Upload">  
+        <button type="submit" >Upload</button>  
     </form>  
 </body>  
 </html>  
