--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -2,11 +2,11 @@
 <head>  
     <title>Openslide Image Annotation</title>  
 </head>  
-<body>
-    <h1>Upload your file</h1>
+<body style="text-align:center">
+    <h1>Upload your Image</h1>
     <form action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" />  
-        <button type="submit" >Upload</button>  
+        <button type="submit" >Upload</button> 
     </form>  
 </body>  
 </html>  
