--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -3,7 +3,7 @@
     <title>Openslide Image Annotation</title>  
 </head>  
 <body style="text-align:center">
-    <h1 style="font-size:2rem, margin-bottom:20px">Upload your Image</h1>
+    <h1 style="font-size:2.5rem; margin-bottom:30px">Upload your Image</h1>
     <form action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" /><br>
         <button type="submit" >Upload</button> 
