--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -4,8 +4,8 @@
 </head>  
 <body style="text-align:center">
     <h1 style="font-size:2.5rem; margin-bottom:30px">Upload your Image</h1>
-    <form action = "/success" method = "post" enctype="multipart/form-data">  
-        <input type="file" name="file" /><br>
+    <form style="text-align:center" action = "/success" method = "post" enctype="multipart/form-data">  
+        <input type="file" name="file" /><br><br><br>
         <button type="submit" >Upload</button> 
     </form>  
 </body>  
