--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -4,7 +4,7 @@
 </head>  
 <body style="text-align:center">
     <h1 style="font-size:2.5rem; margin-bottom:30px">Upload your Image</h1>
-    <form style="text-align:center" action = "/success" method = "post" enctype="multipart/form-data">  
+    <form style="display: flex;flex-direction: column;align-items: center;margin-top: 10vh;" action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" /><br><br><br>
         <button type="submit" >Upload</button> 
     </form>  
