--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -6,7 +6,14 @@
     <h1 style="font-size:2.5rem; margin-bottom:30px">Upload your Image</h1>
     <form style="display: flex;flex-direction: column;align-items: center;margin-top: 10vh;" action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" /><br><br><br>
-        <button type="submit" >Upload</button> 
+        <button style="
+            background: #fff;
+            border: none;
+            box-shadow: 1px 1px 1px 1px #A7A7A7;
+            padding: 5px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 15px;" type="submit" >Upload</button> 
     </form>  
 </body>  
 </html>  
