--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
     </style> 
 </head>  
   <body>
-    <h1>Output:</h1>
+    <h1>Open-X-Romy</h1>
     <div id="loader" class="center"></div>
     <div id="seadragon-viewer" style="width:800px; height:600px;"></div>
     <script src="//openseadragon.github.io/openseadragon/openseadragon.min.js"></script>
