--- a/templates/file_upload_form.html
+++ b/templates/file_upload_form.html
@@ -3,9 +3,9 @@
     <title>Openslide Image Annotation</title>  
 </head>  
 <body style="text-align:center">
-    <h1 style="font-size:2.5rem; margin-bottom:30px">Upload your Image</h1>
+    <h1 style="font-size:2.5rem; margin-bottom:30px">Open-X</h1>
     <form style="display: flex;flex-direction: column;align-items: center;margin-top: 10vh;" action = "/success" method = "post" enctype="multipart/form-data">  
-        <input type="text" name="file" /><br><br><br>
+        <input type="text" name="file"  placeholder="Drive Link"><br><br><br>
         <button style="
             background: #fff;
             border: none;
